--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "json:server": "json-server --watch db.json --port 3004"
+    "start": "nodemon app.js",
+    "run:prod": "node app.js",
+    "json:server": "json-server --watch db.json --port 3005"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "json-server": "^0.16.1",
+    "mongoose": "^5.10.4",
+    "nodemon": "^2.0.4"
   }
 }
