--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "run:dev": "nodemon PORT=3005 app.js",
+    "dev": "nodemon PORT=3005 app.js",
     "json:server": "json-server --watch db.json --port 3005"
   },
   "keywords": [],
